# runrestic

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  coverage.xml  example.toml  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: config.md  index.md  modules.md  usage.md
runrestic/: __init__.py  main.py
runrestic/commands/: hooks.py  restic_shell.py  runrestic.py
runrestic/config/: collect.py  configuration.py  environment.py  example.toml  log.py  schema.json  signals.py  validate.py
runrestic/metrics/: __init__.py  prometheus.py
runrestic/restic/: __init__.py  installer.py  output_parser.py  output_parsing.py  runner.py  shell.py  spawn.py  tools.py
runrestic/runrestic/: configuration.py  hooks.py  main.py  restic_shell.py  runrestic.py  schema.json  tools.py
runrestic/tools/: converters.py
sample/: example.toml
sample/cron/: runrestic
tests/: retry_testing_tool.py  test_configuration.py  test_metrics.py  test_restic_tools.py  test_runrestic_tools.py
tests/metrics/: test_metrics.py
tests/restic/: test_installer.py  test_output_parsing.py  test_restic_tools.py  test_runner.py  test_shell.py  test_tools_subprocess.py
tests/runrestic/: test_configuration.py  test_runrestic.py  test_runrestic_tools.py
tests_old/: retry_testing_tool.py
tests_old/metrics/: test_metrics.py
tests_old/restic/: test_output_parsing.py  test_restic_tools.py  test_tools_subprocess.py
tests_old/runrestic/: test_configuration.py
