[project]
name = "runrestic"
version = "0.0.1"
description = "A wrapper script for Restic backup software that inits, creates, prunes and checks backups."
authors = [{ name = "Andreas Nüßlein", email = "andreas@nuessle.in" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema>=4.23.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://sinnwerkstatt.github.io/runrestic/"
Repository = "https://github.com/sinnwerkstatt/runrestic"
Documentation = "https://sinnwerkstatt.github.io/runrestic/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "pytest-subprocess>=1.5.3",
    "types-jsonschema>=4.23.0.20241208",
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.32.0.20250328",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["runrestic"]

[tool.mypy]
files = ["runrestic"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:open_text is deprecated:DeprecationWarning',
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Deprecated import
    "UP035",
    "UP006",
    # Logging exception
    "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
exclude_lines = [
  "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
source = ["runrestic"]
