[tool.poetry]
name = "runrestic"
version = "0.5.30"
description = "A wrapper script for Restic backup software that inits, creates, prunes and checks backups"
license = "GPL-3.0+"
authors = [ "Andreas Nüßlein <andreas@nuessle.in>" ]
readme = 'README.md'
repository = "https://github.com/sinnwerkstatt/runrestic"
homepage = "https://github.com/sinnwerkstatt/runrestic"
keywords = ["backup"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Archiving :: Backup",
]

[tool.poetry.dependencies]
python = ">=3.10"
toml = "^0.10"
jsonschema = ">3.0"
requests = ">2.27.1"

[tool.poetry.group.dev.dependencies]
ipdb = "*"
ruff = { version = ">=0.11" }
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-subprocess = "*"
importlib-metadata = { version = ">=4.0", python = ">=3.10" }
types-requests = "*"
types-toml = "*"

[tool.poetry.scripts]
runrestic = 'runrestic.runrestic.runrestic:runrestic'

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.format]
preview = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = false
line_length = 88
known_first_party = 'apps'
default_section = 'THIRDPARTY'
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
no_lines_before = 'LOCALFOLDER'
