[project]
name = "runrestic"
version = "0.5.30"
description = "A wrapper script for Restic backup software that inits, creates, prunes and checks backups"
license = "GPL-3.0+"
authors = [ { name="Andreas Nüßlein", email="andreas@nuessle.in" } ]
readme = 'README.md'
keywords = ["backup"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Archiving :: Backup",
]
requires-python = ">=3.10"


dependencies = [
    "jsonschema>3.0",
    "requests>=2.27.1",
    "toml>=0.10",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-subprocess>=1.5.3",
    "ruff>=0.14.9",
    "types-requests>=2.32.4.20250913",
    "types-toml>=0.10.8.20240310",
]

[project.urls]
repository = "https://github.com/sinnwerkstatt/runrestic"
homepage = "https://github.com/sinnwerkstatt/runrestic"

[project.scripts]
runrestic = 'runrestic.runrestic.runrestic:runrestic'

[tool.uv]
package = true
